[package]
name = "deezranbum"
version = "0.1.0"
edition = "2024"
description = "Fetches a random deezer album, without repeats between sessions"
license = "MIT"
homepage = "https://github.com/lafarguem/deezranbum"
repository = "https://github.com/lafarguem/deezranbum"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
directories-next = "2.0.0"
tempfile = "3.26.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
